--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/EvamariaTG/EvaMaria",
-    "repository": "https://github.com/EvamariaTG/EvaMaria",
+    "website": "https://github.com/rmithran/Searchy",
+    "repository": "https://github.com/rmithran/Searchy",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
